# androidemulator

./: README.md  pyproject.toml  requirements.testing.txt  setup.py
.github/workflows/: push_macos.yml  push_ubuntu.yml  push_ubuntu_lite.yml  push_win.yml
src/androidemulator/: adb.py  android_tests.py  avdman.py  avdmanager.py  cli.py  common.py  emulator.py  execute.py  paths.py  sdkmanager.py  trampoline.py  uninstallapp.py  util.py  which_all.py
src/androidemulator/cmds/: adb.py  avdmanager.py  emulator.py  gradle.py  java.py  sdkmanager.py
src/androidemulator/testing/: __init__.py  watchdog.py
tests/: test_adb.py  test_avd.py  test_avd_create.py  test_avd_gradle.py  test_cli.py  test_cmds.py  test_emulator.py  test_exe.py  test_sdk_manager.py  test_sdk_manager_install.py  test_where_all.py
