[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "androidemulator"
description = "Controls the Android Emulator from python API bindings"
requires-python = ">=3.7"
keywords = ["template-python-cmd"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [

]
# Change this with the version number bump.
# Also make the change in zcmds/version.py
version = "1.0.0"

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[project.scripts]
androidemulator = "androidemulator.cli:main"
# These paths are hard to get right, so we use the entry points
# to make sure they are correct.
sdkmanager = "androidemulator.cmds.sdkmanager:main"
